# zero2prod

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.ps1
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
