[package]
name = "zero2prod"
version = "0.3.0"
edition = "2024"
authors = ["Jeffery D. Mitchell", "<crusty.rustacean@gmail.com>"]
description = "My code for the Zero to Production in Rust book."
readme = "README.md"
repository = "https://github.com/crustyrustacean/zero2prod.git"
license = "MIT"
publish = false

[[bin]]
name = "zero2prod"
path = "src/bin/main.rs"

[dependencies]
actix-web = "4.12.1"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.12.26"
