[package]
name = "zero2prod"
version = "0.6.1"
edition = "2024"
authors = ["Jeffery D. Mitchell", "<crusty.rustacean@gmail.com>"]
description = "My code for the Zero to Production in Rust book."
readme = "README.md"
repository = "https://github.com/crustyrustacean/zero2prod.git"
license = "MIT"
publish = false

[[bin]]
name = "zero2prod"
path = "src/bin/main.rs"

[dependencies]
actix-web = "4.12.1"
chrono = { version = "0.4.42", features = ["clock"] }
config = "0.15.19"
log = "0.4.29"
secrecy = { version = "0.10.3", features = [ "serde" ] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", default-features = false, features = ["migrate", "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = [ "log" ] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1"
rand = "0.9.2"
reqwest = "0.12.28"
